Estilo Elemento, elemento

--- a/ParaPract/styles.css
+++ b/ParaPract/styles.css
@@ -44,8 +44,10 @@ body {
     margin-bottom: 20px;
    }
    
-   
-   
+   h2, h3 {
+    color:#041cec;
+    font-weight: bold;
+   }
    
    
    
